--- a/app/src/main/res/layout/layout_empty_data.xml
+++ b/app/src/main/res/layout/layout_empty_data.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="@dimen/normal_margin"
+    android:padding="@dimen/spacing_normal"
     android:visibility="gone">
 
     <TextView
